--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
         </title><h1>Odin Recipes Project</h1>
         <ul>
-            <li><a href="recipes/jerk_pork.html">Jerk Pork</a></li>
+            <li><a href="recipes/jerkpork.html">Jerk Pork</a></li>
             <li><a href="recipes/griot.html">Griot</a></li>
             <li><a href="recipes/porksisig.html">Pork Sisig</a></li>
         </ul>
